--- a/src/components/hexagon/hexagon.css
+++ b/src/components/hexagon/hexagon.css
@@ -12,12 +12,12 @@
 }
 
 .box {
-    width: 100px;
-    height: 100px;
-    border-top: 100px solid black;
-    border-left: 100px solid blue;
-    border-right: 100px solid yellow;
-    border-bottom: 100px solid green;
+    max-width: 100%;
+    height: 100%;
+    border-top: 20px solid black;
+    border-left: 20px solid blue;
+    border-right: 20px solid yellow;
+    border-bottom: 20px solid green;
     margin: 5px;
     background-color: red;
 }
