--- a/src/components/hexagon/hexagon.css
+++ b/src/components/hexagon/hexagon.css
@@ -3,17 +3,24 @@
     height: 100%;
 }
 
-.container {
+.inputContainer {
     background-color: pink;
     width: 100%;
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: column nowrap;
     justify-content: center;
 }
 
+.container {
+    display: flex;
+    width: 100%;
+    flex-flow: row nowrap;
+    align-items: center;
+}
+
 .box {
-    max-width: 100%;
-    height: 100%;
+    width: 30px;
+    height: 30px;
     border-top: 20px solid black;
     border-left: 20px solid blue;
     border-right: 20px solid yellow;
